--- a/package.json
+++ b/package.json
@@ -1,31 +1,46 @@
 {
-  "name": "tmp",
+  "name": "fabriq-pinia-colada-kata",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "pnpm run --stream '/^dev:/'",
+    "dev:client": "vite",
+    "dev:db": "json-server --port 7777 json-server/db.json",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build",
+    "type-check": "vue-tsc --build --force",
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.17",
+    "@vueuse/router": "^13.0.0",
+    "mande": "^2.0.9",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.0.17",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "water.css": "^2.1.1"
   },
   "devDependencies": {
+    "@pinia/colada": "^0.14.2",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.13.9",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "json-server": "0",
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
+    "unplugin-vue-router": "^0.12.0",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vue-tsc": "^2.2.8"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
