--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "@vueuse/core": "^13.0.0",
     "@vueuse/router": "^13.0.0",
     "mande": "^2.0.9",
     "pinia": "^3.0.1",
